--- a/style.css
+++ b/style.css
@@ -187,8 +187,8 @@ main #menu-links {
   top: 0;
   right: -200px;
   width: 200px;
-  height: 100%;
-  background: #2b2b2b;
+  height: 100vh;
+  background: #3a4a5e;
   box-shadow: -2px 0 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   transition: right 0.3s ease-in-out;
@@ -196,6 +196,7 @@ main #menu-links {
 }
 main #menu-links li {
   padding: 15px 20px;
+  background: #3a4a5e;
 }
 main #menu-links li a {
   text-decoration: none;
